--- a/BUTTON/BUTTON.ioc
+++ b/BUTTON/BUTTON.ioc
@@ -12,21 +12,15 @@ Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB5
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_ND
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PB1
-Mcu.Pin7=PB2
-Mcu.Pin8=PB3
-Mcu.Pin9=PB4
-Mcu.PinsNb=16
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PB4
+Mcu.Pin6=PB5
+Mcu.Pin7=VP_SYS_VS_ND
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -50,20 +44,14 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PB1.Locked=true
-PB1.Signal=GPIO_Output
-PB2.Locked=true
-PB2.Signal=GPIO_Output
-PB3.Locked=true
-PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_PuPd
+PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
-PB4.Signal=GPIO_Output
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_PuPd
+PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
-PB5.Signal=GPIO_Output
-PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.Locked=true
-PB7.Signal=GPIO_Output
+PB5.Signal=GPIO_Input
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd
 PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
 PC13-TAMPER-RTC.Locked=true
@@ -72,10 +60,6 @@ PC14-OSC32_IN.GPIOParameters=GPIO_PuPd
 PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Input
-PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd
-PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
-PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
